CDCRM-938 : Type Amenageur et abstraction gestion des droits
